# cpod_interface

./: .gitignore  README.md
launch/: ros2_plc_interface.launch.py
scripts/: cmd_vel.sh  markdown.md  test_control_packete.yaml
src/autoware_msg/: CMakeLists.txt  package.xml
src/autoware_msg/msg/: ExtractedPosition.msg
src/autoware_msgs/: CMakeLists.txt  package.xml
src/autoware_msgs/msg/: ColorSet.msg  Signals.msg
src/coms_connector/: CMakeLists.txt  package.xml
src/coms_connector/config/: plc_connector.param.yaml
src/coms_connector/include/: plc_connector.h  udp_connector.h
src/coms_connector/include/coms_connector/: plc_connector.h  udp_connector.h
src/coms_connector/launch/: plc_connector.launch.py
src/coms_connector/src/: plc_receiver.cpp  plc_receiver_node.cpp  plc_sender.cpp  plc_sender_node.cpp
src/coms_converter/: CMakeLists.txt  package.xml
src/coms_converter/config/: plc_converter.param.yaml
src/coms_converter/include/coms_converter/: plc_converter.h
src/coms_converter/launch/: plc_converter.launch.py  plc_converter.launch.xml
src/coms_converter/src/: plc_converter.cpp
src/coms_msgs/: CMakeLists.txt  package.xml
src/coms_msgs/msg/: ComsControlPacket.msg  ComsSensorPacket.msg
src/tablet_socket_msgs/: CMakeLists.txt  package.xml
src/tablet_socket_msgs/msg/: RouteCmd.msg
